<resources>
    <string name="app_name">Evaluacion_Final-Modulo_5-Grupo_1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="actividades">Actividades</string>
    <string name="agregar_actividad">Agregar Actividad</string>
    <string name="seleccionar_hora">Seleccionar Hora</string>
    <string name="seleccionar_fecha">Seleccionar Fecha</string>
    <string name="descripci_n">Descripción</string>
    <string name="t_tulo">Título</string>
    <string name="nueva_actividad">Nueva Actividad</string>

    <!-- Textos para la pantalla About -->
    <string name="about_message">Aplicación desarrollada por el Grupo 1 /n prueba</string>
    <string name="volver">Volver</string>
</resources>