<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".NuevaActividadFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nueva_actividad"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <EditText
        android:id="@+id/editTextTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/t_tulo"
        android:padding="12dp"
        android:textSize="18sp"
        android:background="@drawable/borde"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <EditText
        android:id="@+id/editTextDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/descripci_n"
        android:padding="12dp"
        android:textSize="18sp"
        android:background="@drawable/borde"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:id="@+id/textViewFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/seleccionar_fecha"
        android:padding="12dp"
        android:textSize="18sp"
        android:background="@drawable/borde"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/textViewHora"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/seleccionar_hora"
        android:padding="12dp"
        android:textSize="18sp"
        android:background="@drawable/borde"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

    <Button
        android:id="@+id/botonAgregarActividad"
        android:layout_width="146dp"
        android:layout_height="wrap_content"
        android:text="@string/agregar_actividad"
        android:textColor="@color/black"
        android:backgroundTint="#81C784"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/botonActividades"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85"/>

    <Button
        android:id="@+id/botonActividades"
        android:layout_width="146dp"
        android:layout_height="wrap_content"
        android:text="@string/actividades"
        android:textColor="@color/black"
        android:backgroundTint="#4DD0E1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/botonAgregarActividad"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85"/>



</androidx.constraintlayout.widget.ConstraintLayout>