<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/textViewTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/borde"
                android:hint="@string/t_tulo"
                android:padding="4dp"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewFecha"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="4dp"
                    android:background="@drawable/borde"
                    android:hint="@string/seleccionar_fecha"
                    android:padding="4dp"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textViewHora"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="4dp"
                    android:background="@drawable/borde"
                    android:hint="@string/seleccionar_hora"
                    android:padding="4dp"
                    android:textSize="14sp" />

                <ImageButton
                    android:id="@+id/botonConfirmar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/check_24px"
                    android:layout_gravity="center_vertical"
                    android:backgroundTint="#81C784"
                    android:padding="4dp"
                    android:layout_margin="4dp"/>

                <ImageButton
                    android:id="@+id/botonCancelar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/close_24px"
                    android:layout_gravity="center_vertical"
                    android:backgroundTint="#E57373"
                    android:padding="4dp"
                    android:layout_margin="4dp"/>

            </LinearLayout>

            <TextView
                android:id="@+id/textViewDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/borde"
                android:hint="@string/descripci_n"
                android:padding="4dp"
                android:textSize="14sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>